--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ license = "MIT OR Apache-2.0"
 
 [dependencies]
 bevy = "0.8"
+kayak_ui = { git="https://github.com/StarArawn/kayak_ui", features = ["bevy_renderer"] }
+#rui = "0.3.3"
+
